# modular

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  cross-build.sh  gen_module.py  gen_module.sh  modular.c  modular.h
python/modular/: __main__.py  argument.py  event.py  method.py  module.py  module_example.yaml  printer.py  struct.py
tests/: CMakeLists.txt  pingpong.c  ringbuf.c
tests/i2c/: CMakeLists.txt  i2c.yaml  master.c  sim.c  slave.c
tests/pingpong/: CMakeLists.txt  pingpong.c  pingpong.yaml
tests/util/: CMakeLists.txt  usart_printf.c  usart_printf.h
util/: CMakeLists.txt  ringbuf.c  ringbuf.h
